# SimpleNetLib

./: .gitignore  CMakeLists.txt  README.md  SimpleNetClient.cpp  SimpleNetClient.h  SimpleNetConn.cpp  SimpleNetConn.h  SimpleNetServer.cpp  SimpleNetServer.h  commons.h  serverMain.cpp
source/: SimpleNetClient.cpp  SimpleNetClient.h  SimpleNetConn.cpp  SimpleNetConn.h  SimpleNetServer.cpp  SimpleNetServer.h
test/: clientMain.cpp  serverMain.cpp
